# cu_catalyst_ai_repo

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  step.txt  tmp_clean.txt  tmp_default_run.txt  tmp_err.txt  tmp_err2.txt  tmp_explain.txt  tmp_feat.txt  tmp_final.txt  tmp_pipeline.txt  tmp_pytest_all.txt  tmp_pytest_final.txt  tmp_pytest_fixed.txt  tmp_pytest_governance.txt  tmp_report.txt  tmp_ruff.txt  tmp_ruff2.txt  tmp_sync.txt  tmp_train.txt
.agents/skills/plan-feature/: SKILL.md
.agents/skills/update-tests/: SKILL.md
.claude/: launch.json  settings.json
.claude/commands/: merge-gate.md  review-pr.md
artifacts/superpowers/: brainstorm.md
configs/: config.yaml
configs/cv/: kfold5.yaml
configs/data/: cathub.yaml  demo.yaml  real_table.yaml
configs/features/: baseline.yaml  cathub_gcn.yaml  cathub_minimal.yaml  cathub_physics_clean.yaml  cathub_physics_functional.yaml  cathub_physics_stratified.yaml  cathub_proxy.yaml  cathub_proxy_only.yaml  transition_metals.yaml
configs/model/: gpr.yaml  linear.yaml  rf.yaml  rf_tuned.yaml  xgb.yaml
docs/: DATA_IMPORT.md  REVIEW_CHECKLIST.md  WORKFLOW.md
reports/: rf_summary.md
scripts/: bootstrap.sh  compare_models.py  run_demo.sh  tune_rf.py
scripts/hooks/: post-edit-format.sh  pre-commit-check.sh  secret-scan.sh  test-gate.sh
src/cu_catalyst_ai/: cli.py  settings.py
tests/: test_cathub_fetch.py  test_cleaning_governance.py  test_config_smoke.py  test_data_ingest.py  test_element_features.py  test_features.py  test_models.py  test_schemas.py  test_split_registry.py
(+39 files in other folders)
