[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "cu-catalyst-ai"
version = "0.1.0"
description = "Pure-Python research workflow for Cu catalyst screening"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3.2",
  "pydantic>=2.7.0",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.0",
  "matplotlib>=3.8.4",
  "joblib>=1.4.2",
  "xgboost>=2.0.3",
  "shap>=0.46.0",
  "mp-api>=0.43.0",
  "pymatgen>=2024.6.10",
  "ase>=3.23.0",
  "pyarrow>=16.1.0",
  "mlflow>=2.14.1",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/cu_catalyst_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
